200122b - added divs to all <tr>

--- a/lessons/giorti25mart01.htm
+++ b/lessons/giorti25mart01.htm
@@ -1,14 +1,14 @@
 <table style="border-collapse: collapse; width: 100%; height: 329px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">Ως πότε <strong>παλικάρια</strong>, θα ζούμε στα στενά,<br />μονάχοι σαν <strong>λιοντάρια</strong>, στες ράχες στα βουνά;<br />Ως πότε παλικάρια, θα <strong>ζούμε στα στενά</strong>,<br />μονάχοι σαν λιοντάρια, στες <strong>ράχες στα βουνά;</strong><br />Κάλλιο είναι <span style="text-decoration: underline;">μίας ώρας</span> <strong>ελεύθερη ζωή</strong>,<br />παρά<strong> σαράντα χρόνους</strong>,<span style="text-decoration: underline;"> σκλαβιά και φυλακή</span></td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;"><span style="color: #2dc26b;"><strong>Παρά σαράντα</strong> χρόνους, <span style="text-decoration: underline;">σκλαβιά και</span> φυλακή</span><br /><span style="color: #e03e2d;"><strong>Σπηλιές</strong> να <span style="text-decoration: underline;">κατοικούμε</span>, να βλέπουμε κλαδιά,</span><br /><span style="color: #236fa1;">να φεύγωμ' απ' τον <strong>κόσμο,</strong> για την <span style="text-decoration: underline;">πικρή σκλαβιά</span>;</span><br /><span style="color: #b96ad9;">Σπηλιές να <strong>κατοικούμε</strong>, να <span style="text-decoration: underline;">βλέπουμε</span> κλαδιά,</span><br /><span style="color: #3598db;">να φεύγωμ' απ' τον <span style="text-decoration: underline;">κόσμο</span>, για την πικρή <strong>σκλαβιά</strong>;</span></td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Κάλλιο είναι μιας <span style="text-decoration: underline;">ώρας</span><span style="background-color: #e67e23;"> <strong>ελεύθερη</strong></span> ζωή,<br />παρά <strong>σαράντα</strong><span style="background-color: #3598db;"> χρόνους</span>, <span style="text-decoration: underline;">σκλαβιά</span> και φυλακή</p>
