--- a/lessons/giorti_apokries01.htm
+++ b/lessons/giorti_apokries01.htm
@@ -1,18 +1,18 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
 <p><strong>Απόκριες</strong> <span style="background-color: #f1c40f;">ονομάζονται</span> <span style="text-decoration: underline;"><strong>οι τρεις εβδομάδες πριν από την Καθαρά Δευτέρα</strong></span><br />οπότε και αρχίζει η <strong>Μεγάλη</strong> <span style="background-color: #bfedd2;">Σαρακοστή</span>. Ταυτίζονται με την περίοδο του Τριωδίου,<br />μια κινητή περίοδο στην <span style="background-color: #2dc26b;">Ορθόδοξη Χριστιανική</span> παράδοση από την <strong>Κυριακή</strong> του <br />Τελώνου και του <span style="background-color: #b96ad9;">Φαρισαίου</span> μέχρι την <strong>Κυριακή</strong> της Τυροφάγου ή Τυρινής.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Η <strong>Τσικνοπέμπτη</strong> είναι γιορτή της <span style="background-color: #f1c40f;">ορθόδοξης</span> παράδοσης στην οποία καταναλώνονται<br />μεγάλες <span style="background-color: #3598db;">ποσότητες</span> κρέατος. <strong>Λαμβάνει μέρος την Πέμπτη</strong>, λόγω του ότι οι μέρες Τετάρτη<br />και Παρασκευή θεωρούνται <span style="background-color: #2dc26b;">νηστίσιμες</span>, <strong>της δεύτερης εβδομάδας των Αποκριών</strong>, την <br />αποκαλούμενη Κρεατινή. <strong>Προηγείται</strong> αυτής η πρώτη κατά σειρά <span style="background-color: #b96ad9;">Προφωνή</span> και ακολουθεί <br />η τρίτη εβδομάδα της Τυροφάγου. <span style="background-color: #f1c40f;">Πραγματοποιείται</span> κάποιες <strong>μέρες</strong> πριν από την έναρξη <br />της μεγάλης<strong> νηστείας</strong> της Σαρακοστής.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Τις μέρες αυτές γίνεται το έθιμο του <span style="background-color: #f1c40f;">γλεντιού</span>, της ψυχαγωγίας και του <strong>«μασκαρεματος»</strong>, της<br /><strong>μεταμφίεσης</strong>, που έχει <span style="background-color: #3598db;">παραμείνει</span> Κρόνια «Λουπερκάλια» και «Σατουρνάλια» και από τις<br />αρχαιότερες «Διονυσιακές γιορτές» των <strong>Ελλήνων</strong>, όπου <span style="text-decoration: underline;">οι άνθρωποι <span style="background-color: #2dc26b;">μεταμφιέζονταν</span>, χόρευαν,<br />τραγουδούσαν πίνοντας κρασί και το <span style="background-color: #b96ad9;">κέφι</span> έφτανε στο κατακόρυφο προς τιμή του <strong>Διόνυσου</strong>.</span></p>
