--- a/lessons/giorti_pasxa01.htm
+++ b/lessons/giorti_pasxa01.htm
@@ -1,18 +1,18 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
 <p><span style="text-decoration: underline; background-color: #e03e2d;">Πάσχα</span> ονομάζεται η μεγάλη γιορτή του <strong>Χριστιανισμού</strong> και του ιουδαϊσμού. Στον Ιουδαϊσμό <br />καθιερώθηκε ως <span style="text-decoration: underline;">ανάμνηση</span> της <strong>Εξόδου</strong>, που <span style="background-color: #3598db;">ελευθέρωσε</span> τους Εβραίους από την αιγυπτιακή <br />δουλεία. <strong>Μεταγενέστερα</strong> υιοθετήθηκε ως εορτασμός από τους <span style="text-decoration: underline;">Χριστιανούς</span> αναφορικά με το <br />θυσιαστικό θάνατο και την <strong>ανάσταση</strong> του <span style="text-decoration: underline;">Ιησού Χριστού</span>.  </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Το γεγονός της <span style="text-decoration: underline;">απελευθέρωσης</span> αυτής συνέβη με μια σειρά <span style="background-color: #2dc26b;">θεϊκών</span> προνοιακών <br />παρεμβάσεων, από τις οποίες η <span style="background-color: #eccafa;">σημαντικότερη</span> <span style="text-decoration: underline;">εκδηλώνεται</span> τη νύχτα κατά την <br />οποία θα εξολοθρεύονταν τα <span style="background-color: #e03e2d;">πρωτότοκα</span> των<span style="text-decoration: underline;"> ανθρώπων</span> και των ζώων των Αιγυπτίων,<br />ενώ τα <span style="background-color: #eccafa;">σπίτια</span> των Εβραίων θα <span style="text-decoration: underline;">προστατεύονταν</span> αφού οι πόρτες τους είχαν σημαδευτεί <br />με το αίμα του <span style="background-color: #3598db;">αρνιού</span> που είχαν<span style="text-decoration: underline;"> θυσιάσει.  </span></p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Το <strong>Χριστιανικό Πάσχα</strong>, ή κοινώς Πασχαλιά ή Λαμπρή, και ειδικότερα η <span style="background-color: #2dc26b;">Ανάσταση</span> του Χριστού <br />ή απλώς <strong>Ανάσταση</strong>, είναι η <span style="background-color: #eccafa;">σπουδαιότερη</span> γιορτή του χριστιανικού εκκλησιαστικού έτους. <br />Γιορτάζεται την <strong>πρώτη Κυριακή</strong> <span style="text-decoration: underline;">μετά την πανσέληνο</span> που ακολουθεί την <span style="background-color: #e03e2d;">εαρινή ισημερία.</span> <br />H <span style="background-color: #2dc26b;">Ορθόδοξη</span> Εκκλησία γιορτάζει το Πάσχα την <strong>πρώτη Κυριακή</strong> μετά την Ιουλιανή (ή Μετώνεια) <br />Πανσέληνο που <strong>ακολουθεί</strong> την <span style="background-color: #eccafa;">εαρινή ισημερία</span> σύμφωνα με το Ιουλιανό Ημερολόγιο. <br />Γιορτάζεται η <span style="background-color: #e03e2d;">ανάσταση</span> του<strong> Ιησού Χριστού  </strong></p>
