--- a/lessons/giorti_pasxa02.htm
+++ b/lessons/giorti_pasxa02.htm
@@ -1,14 +1,14 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">Κυριακή <strong>Άγιο Πάσχα</strong> (Ημέρα Ανάστασης.)<br /><strong><span style="text-decoration: underline;">Χριστός Ανέστη εκ νεκρών</span></strong>,<br />θανάτω θάνατον<strong> πατήσας</strong><br />και τοις<strong> εν τοις μνήμασιν,</strong><br /><strong>ζωήν χαρισάμενος</strong><br /> <br /><strong>Ανάστασιν</strong> Χριστού θεασάμενοι,<br /><strong>προσκυνήσομεν</strong> Άγιον, Κύριον,<br /><strong>Ιησούν</strong> τον μόνον αναμάρτητον.</td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">Τον Σταυρόν Σου <strong>Χριστέ</strong> προσκυνούμεν<br />και την Αγίαν σου <strong>Ανάστασην</strong><br />υμνούμεν και <strong>δοξάζωμεν</strong><br /><br />Συ γαρ ει ο <strong>Θεός</strong> ημών,<br />εκτός Σου άλλον <strong>ουκ οίδαμεν,</strong><br />το όνομά <strong>Σου</strong> ονομάζομεν.</td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">Δεύτε, πάντες οι πιστοί, προσκυνήσωμεν<br />την του Χριστού Αγίαν Ανάστασην.<br />Ιδού γαρ ήλθε δια του Σταυρού<br />χαρά εν όλω τω κόσμω.<br /> <br />Δια παντός ευλογούντες τον Κύριον,<br />υμνούμεν την Ανάστασην Αυτού.<br />Σταυρόν γαρ υπομείνας δι' ημάς,<br />θανάτω, θάνατον ώλεσεν.</td>
 </tr>
