--- a/lessons/lesson10.htm
+++ b/lessons/lesson10.htm
@@ -1,18 +1,18 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Η <strong>κρεμάλα</strong>. Παίζεται με 2 ή 4 <span style="background-color: #e03e2d;">παίχτες</span>. Παρακολουθείται όμως ευχάριστα από πολλούς. <br />Παίρνετε μια κόλλα χαρτί και στη μέση <span style="background-color: #2dc26b;">γράφετε</span> την <strong>άλφα βήτα.</strong> Στο πάνω διάστημα <br />ζωγραφίζουμε μια <strong>κρεμάλα</strong>. Στο κάτω μέρος γράφουμε την λέξη που θα <span style="background-color: #f1c40f;">κρύψουμε</span> από <br />τον αντίπαλό μας. Την λέξη την γράφουμε στον <span style="background-color: #e03e2d;">αντίπαλο</span> με <strong>παύλες</strong> δηλαδή μετράμε τα <br />γράμματά της και το <span style="background-color: #2dc26b;">νούμερο</span> που θα βρούμε θα είναι και οι <strong>παύλες</strong> που θα βάλουμε.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> Όταν αρχίσει το <strong>παιχνίδι</strong> ο <span style="background-color: #2dc26b;">αντίπαλος</span> μας λέει ένα γράμμα από την άλφα βήτα. Αν το γράμμα <br />που είπε ανήκει στην κρυμμένη λέξη τότε το <strong>σημειώνουμε</strong> πάνω στις <span style="background-color: #f1c40f;">παύλες</span>. Αν το γράμμα που <br />είπε ο<span style="background-color: #2dc26b;"> αντίπαλος</span> είναι λάθος τότε κρεμάμε το <strong>κεφάλι</strong> του και διαγράφουμε το γράμμα από την <br />άλφα βήτα. Έτσι συνεχίζεται το <span style="background-color: #e03e2d;">παιχνίδι</span> και γίνεται το ίδιο <strong>μέχρι να βρει</strong> ο αντίπαλος τη λέξη. <br />Αν όμως ο αντίπαλος δεν βρει τη λέξη <strong>μέχρι</strong> να <span style="background-color: #3598db;">τελειώσουν</span> τα σημεία του σώματος, χάνει.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> </p>
