--- a/lessons/lesson12.htm
+++ b/lessons/lesson12.htm
@@ -1,18 +1,18 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Το <strong>τζαμί.</strong> Έφτιαχναν με πανιά μια <span style="background-color: #2dc26b;">μπάλα</span> κι έπειτα σε ένα χώρο έφτιαχναν ένα κέντρο κι <br />εκεί έβαζαν <strong>στρογγυλές</strong> <span style="background-color: #3598db;">κεραμίδες.</span> Μετά έκαναν δυο ομάδες. Η μια στεκόταν σε κάποια <br />απόσταση (όριο) και η άλλη <strong>ομάδα</strong> ήταν στις <span style="background-color: #2dc26b;">κεραμίδες</span>. Άμα η μπάλα έριχνε τις κεραμίδες, <br />η ομάδα που ήταν εκεί <strong>χωριζόταν</strong> πάνω και κάτω και η άλλη ομάδα <span style="background-color: #f1c40f;">σκορπιζόταν</span> παντού. </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Η <strong>μπάλα</strong> πήγαινε από χέρια σε χέρια από την ομάδα που ήταν στα <span style="background-color: #2dc26b;">κεραμίδια</span>. Άμα <br />η <strong>μπάλα</strong> ακουμπούσε την άλλη ομάδα και τους "έκαιγε", τότε <span style="background-color: #3598db;">γινόταν</span> το αντίθετο. <br />Αλλιώς, <strong>προσπαθούσαν</strong> να στήσουν τα <span style="background-color: #2dc26b;">κεραμίδια</span> από το μεγαλύτερο στο μικρότερο <br />και το πιο μικρό το έλεγαν <strong>"κούκο"</strong>. Αφού τα έστηναν όλα και δεν <span style="background-color: #f1c40f;">έμενε</span> κανένα, <br />έλεγαν τη λέξη <strong>"τζάμος"</strong>. Τότε <span style="background-color: #e03e2d;">έλεγαν</span> ότι έχουν μία νίκη.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> </p>
