--- a/lessons/lesson13.htm
+++ b/lessons/lesson13.htm
@@ -1,18 +1,18 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Τα <strong>μανιταράκια</strong> παίζονται από <span style="background-color: #2dc26b;">τέσσερα</span> άτομα <span style="text-decoration: underline;">και πάνω</span>. Τα παιδιά βγάζουν κάποιον να "φυλάει". <br />Αυτός μετράει μέχρι το <strong>δέκα</strong> και αρχίζει να <span style="background-color: #eccafa;">κυνηγάει</span>. Όταν πάει να <span style="text-decoration: underline;">πιάσει</span> κάποιο παιδί, τότε αυτό <br />το παιδί <span style="background-color: #3598db;">κάθεται κάτω</span>. Έτσι εκείνος που <span style="text-decoration: underline;">κυνηγάει</span> <strong>δεν μπορεί</strong> να το πιάσει.Για να ξανασηκωθεί <br />κάποιο παιδί <span style="text-decoration: underline;">πρέπει</span> κάποιο<strong> άλλο παιδί</strong> να περάσει <span style="background-color: #f1c40f;">από πάνω</span> του. </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Όταν <strong>όλοι έχουν</strong> <span style="background-color: #2dc26b;">κάτσει κάτω</span> και μείνει μόνο ένας<span style="text-decoration: underline;"> όρθιος</span>, αυτός δεν πρέπει να κάτσει κάτω γιατί<br />θα τα "<strong>φυλάει"</strong>.Αν <span style="background-color: #eccafa;">καταφέρει</span> να πιάσει αυτόν <span style="text-decoration: underline;">που έμεινε</span> τον κάνει να φυλάει αυτός. Ενώ αν <br />καταφέρει, αυτός που έμεινε <strong>όρθιος</strong>, να <span style="background-color: #3598db;">περάσει πάνω</span> από κάποιο παιδί, το <span style="text-decoration: underline;">παιχνίδι</span> συνεχίζεται.<br />Τον <span style="text-decoration: underline;">πρώτο</span> τελικά που θα <strong>καταφέρει</strong> να πιάσει, θα είναι ο <span style="background-color: #f1c40f;">επόμενος</span> που θα τα φυλάει.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p> </p>
