--- a/lessons/month_feb.htm
+++ b/lessons/month_feb.htm
@@ -1,18 +1,18 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Ο <span style="background-color: #2dc26b;">δεύτερος</span> μήνας του έτους ανήκει στην εποχή του Χειμώνα  κατά το Γρηγοριανό ημερολόγιο<br />είναι ο <span style="background-color: #e03e2d;">κουτσός</span> <strong>Φεβρουάριος ή Φλεβάρης, ο Κουτσοφλέβαρος</strong>, με <span style="text-decoration: underline;">28 ημέρες</span> στα κοινά έτη <br />και <span style="text-decoration: underline;">29 στα δίσεκτα, κάθε τέσσερα χρόνια</span> (<span style="background-color: #f1c40f;">χρονολογίες</span> που διαιρούνται ακριβώς με το 4, όπως 2008, 2012, 2016 κ.ο.κ.).</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Στα λατινικά η λέξη <strong><span style="text-decoration: underline;">Φεβρουάριο</span></strong>ς (februarius) <span style="background-color: #3598db;">προέρχεται</span> από το ουσιαστικό februum, που <br />σημαίνει <em><span style="background-color: #e03e2d;">καθαρμός</span>, κάθαρση,</em> λόγω των θρησκευτικών εορτών εξαγνισμού και καθαρμού <br />(Februa ή Februatio) που <span style="background-color: #2dc26b;">τελούνταν</span> στη Ρώμη στη διάρκεια του μήνα. Στην Ελλάδα έχει λάβει <br />και τις<span style="background-color: #b96ad9;"> ονομασίες</span> Μικρός, Κουτσός <span style="text-decoration: underline;"><strong>λόγω της μικρής του διάρκειας.</strong></span></p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p><span style="text-decoration: underline;">Η παρανόηση του λαού</span> ότι τα δίσεκτα έτη είναι &lt;&lt;<strong>γρουσούζικα</strong>&gt;&gt; (<em>"κι αν έρθουν χρόνια <span style="background-color: #b96ad9;">δίσεχτα</span> <br />και μήνες οργισμένοι"</em> όπως λέει το δημοτικό <span style="background-color: #2dc26b;">τραγούδι</span>) ίσως να προέρχεται από τη <span style="text-decoration: underline;">λανθασμένη<br />αντίληψη</span> της <strong>ετυμολογίας και της ορθογραφίας</strong> του πρώτου <span style="background-color: #3598db;">συνθετικού</span> της λέξης 'δίσεκτο'.</p>
