--- a/lessons/month_mar.htm
+++ b/lessons/month_mar.htm
@@ -1,18 +1,18 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Ο <span style="background-color: #e03e2d;">Μάρτιος</span> ή Μάρτης είναι ο <em><span style="text-decoration: underline;">τρίτος μήνα</span></em>ς ανήκει στην εποχή της Άνοιξής και του<br />πολιτικού έτους κατά το<strong> Γρηγοριανό</strong> <span style="background-color: #3598db;">ημερολόγιο</span> και έχει 31 ημέρες.<br /><strong>Εαρινή ισημερία</strong> - Παρόλο που επίσημα η άνοιξη αρχίζει το τελευταίο δεκαήμερο του Μαρτίου<br />(με την άφιξη του Ήλιου στο <strong>εαρινό</strong> σημείο της τροχιάς του στις 20-21 Μαρτίου), εντούτοις<br />ολόκληρος ο Μάρτης λογίζεται ως <span style="background-color: #b96ad9;">ανοιξιάτικος</span> μήνας μαζί με τον Απρίλιο και τον Μάιο.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Ο <span style="background-color: #e03e2d;">Μάρτιος</span> στην Ελληνική λαογραφία : Ένα από τα πιο<em><span style="text-decoration: underline;"> διαδεδομένα</span></em> έθιμα, που προέρχεται<br />από την <span style="background-color: #3598db;">αρχαιότητα</span>, είναι και η τοποθέτηση από τις <strong>μητέρες</strong> την 1η Μαρτίου ενός μικρού<br />βραχιολιού από<strong> άσπρο και κόκκινο νήμα</strong> (που ονομάζεται <span style="background-color: #2dc26b;">Μάρτης</span>) στο χέρι των παιδιών τους<br />για να μην τα μαυρίσει ο Ήλιος. Ο <span style="background-color: #b96ad9;">Μάρτης</span> θεωρείται ότι <span style="text-decoration: underline;">προστάτευε</span> τις κοπέλες από το κάψιμο του ήλιου.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Τον έβγαζαν την ημέρα της <span style="background-color: #e03e2d;">Λαμπρής</span> και το έβαζαν στο<em><span style="text-decoration: underline;"> αρνί για να μην καεί</span></em> κατά το ψήσιμο.<br />Ενώ ακόμη κατάλοιπο της <span style="background-color: #3598db;">αρχαιότητας</span> είναι και το <strong>έθιμο</strong> που ήθελε τις ανύπαντρες κοπέλες<br />να βάζουν των <span style="background-color: #2dc26b;">Αγίων Θεοδώρων</span> κόλλυβα κάτω από το <strong>προσκέφαλό</strong> τους για να τους φανερώσουν<br />τον άντρα που θα έπαιρναν. <span style="text-decoration: underline;">Επίσης</span> κατά το μήνα αυτό <span style="background-color: #b96ad9;">συνηθίζονταν</span> παλιά και το έθιμο της χελιδώνας.</p>
