--- a/lessons/song_synnefoula.htm
+++ b/lessons/song_synnefoula.htm
@@ -1,18 +1,18 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Είχα μια αγάπη, αχ καρδούλα μου,<br />που ‘μοιαζε συννεφάκι, συννεφούλα μου.<br />Σαν συννεφάκι φεύγει ξαναγυρνάει<br />μ’ αγαπά τη μια την άλλη με ξεχνάει.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
 <p><strong>Κι ένα βράδυ αχ καρδούλα μου</strong><br /><span style="text-decoration: underline;">διώχνω ξαφνικά τη συννεφούλα μου.</span><br /><em>Δεν αντέχω άλλο πια να με γελάει</em><br /><strong>μ’ αγαπάει τη μια την άλλη με ξεχνάει.</strong><br /> </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p><span style="background-color: #2dc26b;">Κι έρχεται ο Απρίλης αχ καρδούλα μου</span><br /><span style="background-color: #f1c40f;">να κι ο Μάης συννεφούλα μου.</span><br /><span style="background-color: #e03e2d;">Δίχως τραγούδι, δάκρυ και φιλί</span><br /><span style="background-color: #b96ad9;">δεν είναι άνοιξη φέτος αυτή.</span><br /> </p>
