--- a/lessons/xmas_rudolf.htm
+++ b/lessons/xmas_rudolf.htm
@@ -1,14 +1,14 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">Ρούντολφ το ελαφάκι<br />με καρδούλα ταπεινή<br />σαν πέφτει το βραδάκι<br />έχει μύτη φωτεινή.</td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">Οι φίλοι του λαμπιόνι<br />τον φωνάζουν και γελούν<br />τη μύτη του στο χιόνι<br />κρύβει, όταν του μιλούν.</td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">Όμως μια <strong>πρωτοχρονιά</strong><br />είπε ο<strong> Άϊ Βασίλης...</strong><br />"Ρ<strong>ούντολφ</strong>, είσαι εσύ σοφός<br />έχεις μέσα σου το<strong> φως</strong>".</td>
 </tr>
