--- a/lessons/month_apr.htm
+++ b/lessons/month_apr.htm
@@ -1,18 +1,18 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Ο <span style="background-color: #e03e2d;">Απρίλιος</span>, ή <em>Απρίλης</em> είναι ο τέταρτος μήνας του έτους ανήκει στην εποχή της Άνοιξής<br />κατά το Ιουλιανό και το <em>Γρηγοριανό</em> <span style="background-color: #2dc26b;">ημερολόγιο</span>, ο όγδοος κατά το Εκκλησιαστικό που αρχίζει<br />τον Σεπτέμβριο, ο δεύτερος κατά το <span style="background-color: #3598db;">παλαιό</span> ρωμαϊκό <em>ημερολόγιο</em> και ο δέκατος στο αττικό<br />ημερολόγιο . Ο <span style="background-color: #b96ad9;">Απρίλιος</span> <em>περιλαμβάνει</em> 30 ημέρες.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Η<span style="background-color: #e03e2d;"> «Πρωταπριλιά»</span> με τα αθώα <strong>ψέματά</strong> της είναι ένα <span style="text-decoration: underline;">πανευρωπαϊκό</span> έθιμο. Στην Ελλάδα το αρχαίο<br />αυτό <strong>έθιμο έφτασε</strong>, μάλλον, την <span style="background-color: #3598db;">εποχή</span> των <span style="text-decoration: underline;">Σταυροφοριών</span> κι έχει τις ρίζες του στους αρχαίους<br />Κέλτες. Επειδή τον<strong> Απρίλιο</strong> ο καιρός <span style="background-color: #2dc26b;">καλοσύνευε</span> <span style="text-decoration: underline;">συνήθιζαν</span> την πρωταπριλιά να πηγαίνουν για ψάρεμα.</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Τις π<strong>ερισσότερες</strong> φορές γύριζαν φυσικά με <span style="background-color: #e03e2d;">άδεια χέρια</span>, κι έτσι κατέφευγαν σε ψεύτικες<br />ιστορίες για <strong>μεγάλα ψάρια</strong>. Στη χώρα μας <span style="background-color: #2dc26b;">διαγωνίζονται</span> για το ποιος θα πει το μεγαλύτερο<br />ψέμα, όπως το: «Έλα να πούμε <strong>ψέματα</strong>/ ένα <span style="background-color: #3598db;">σακί</span> γιομάτο/ φόρτωσα ένα μπόντικα/<br />σαράντα <strong>κολοκύθια</strong>/ κι απάνου στα καπούλια του/ ένα <span style="background-color: #b96ad9;">σακί</span> ρεβύθια».</p>
