--- a/lessons/text_tsanta_sxoleio.htm
+++ b/lessons/text_tsanta_sxoleio.htm
@@ -1,18 +1,18 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
 <p><strong>Αγαπητοί γονείς</strong>, Με την<span style="background-color: #b96ad9;"> παρούσα</span> <em>επιστολή</em> θα θέλαμε να σας <span style="text-decoration: underline;">ενημερώσουμε</span> για τη νέα <br />δράση του <strong>Υπουργείου</strong> <span style="text-decoration: underline;">Παιδείας</span>, Έρευνας και <span style="background-color: #2dc26b;">Θρησκευμάτων</span> με τίτλο «Η τσάντα στο σχολείο».</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Με τη <strong>συγκεκριμένη</strong> δράση <span style="background-color: #b96ad9;">καθιερώνεται</span> η <span style="text-decoration: underline;">παραμονή</span> της σχολικής τσάντας των <br />μαθητών/τριών του<strong> Δημοτικού</strong> Σχολείου για <span style="text-decoration: underline;">τουλάχιστον</span> ένα <span style="background-color: #2dc26b;">Σαββατοκύριακο</span> το <br />μήνα, στο <span style="background-color: #3598db;">σχολείο</span>. Η <strong>τσάντα</strong> των μαθητών/τριών <span style="text-decoration: underline;">παραμένει</span> στο σχολείο την <br />Παρασκευή, <span style="background-color: #f1c40f;">πριν </span>από το <strong>Σαββατοκύριακο</strong> που έχει <span style="text-decoration: underline;">αποφασιστεί</span> από το <br />Σύλλογο<strong> Διδασκόντων</strong> του <span style="text-decoration: underline;">Σχολείου</span>, έως τη <span style="background-color: #2dc26b;">Δευτέρα</span>..</p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Σκοπός της <strong>δράσης</strong> αυτής είναι οι <span style="background-color: #b96ad9;">μαθητές/τριες</span> να μην<span style="text-decoration: underline;"> ασχολούνται</span> με την προετοιμασία<br />μαθημάτων κατά τη <span style="text-decoration: underline;">διάρκεια</span> του <strong>Σαββατοκύριακου</strong> και να<span style="background-color: #2dc26b;"> αφιερωθεί</span> αυτός ο χρόνος στη <br />δημιουργική<span style="text-decoration: underline;"> επαφή</span> και <strong>επικοινωνία</strong> <span style="background-color: #3598db;">γονέων</span> – παιδιών.</p>
