--- a/lessons/xmas_trigona.htm
+++ b/lessons/xmas_trigona.htm
@@ -1,18 +1,18 @@
 <table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
 <tbody>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Τρίγωνα, κάλαντα, σκόρπισαν παντού κάθε σπίτι μια φωλιά του μικρού Χριστού,<br />τρίγωνα κάλαντα μες στη γειτονιά ήρθαν τα Χριστούγεννα κι η Πρωτοχρονιά <br />Άστρο φωτεινό, θα `βγει γιορτινό μήνυμα θα φέρει από τον ουρανό </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div2">
 <td style="width: 8.60271%; height: 100%;">2</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Τρίγωνα, κάλαντα, στο μικρό χωριό και χτυπάει χαρούμενα το καμπαναριό<br />τρίγωνα, κάλαντα σκόρπισαν παντού κάθε σπίτι μια φωλιά του μικρού Χριστού </p>
 </td>
 </tr>
-<tr style="height: 100%;">
+<tr style="height: 100%;" id="div3">
 <td style="width: 8.60271%; height: 100%;">3</td>
 <td style="width: 91.3973%; height: 100%;">
 <p>Τρέχουν τα παιδιά μέσα στο χιονιά ήρθαν τα Χριστούγεννα κι η Πρωτοχρονιά<br />μες στη σιγαλιά, ανοίγει η αγκαλιά κι έκανε η αγάπη την καρδιά φωλιά  </p>
