200122b - added divs to all & height 100% <tr>

--- a/lessons/lesson05.htm
+++ b/lessons/lesson05.htm
@@ -1,5 +1,5 @@
 <p> </p>
-<table style="border-collapse: collapse; width: 100%; height: 238px;" border="1">
+<table style="border-collapse: collapse; width: 100%; height: 100%;" border="1">
 <tbody>
 <tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
