--- a/lessons/giorti25mart01.htm
+++ b/lessons/giorti25mart01.htm
@@ -1,4 +1,4 @@
-<table style="border-collapse: collapse; width: 100%; height: 329px;" border="1">
+<table style="border-collapse: collapse; width: 100%; height: 100%;" border="1">
 <tbody>
 <tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
