--- a/tinymce_template_form.html
+++ b/tinymce_template_form.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <form action="return_request.php" target="_blank" method="POST" >
-  <textarea name="mytext" ><table style="border-collapse: collapse; width: 100%; height: 432px;" border="1">
+  <textarea name="mytext" ><table style="border-collapse: collapse; width: 100%; height: 100%;" border="1">
 <tbody>
 <tr style="height: 100%;" id="div1">
 <td style="width: 8.60271%; height: 100%;">1</td>
