--- a/tinymce.html
+++ b/tinymce.html
@@ -41,6 +41,7 @@
 </p>
 <!-- FUNCTIONS #################### -->
 <script src="tinymce_lesson_js_footer.js" type="text/javascript"></script>
+<script src="tinymce_remote_sch.js" type="text/javascript"></script>
 <script>
     //check if external file is loaded and if not load from CDN (NOTE : also works on Firefox 17)
     if(typeof(first_click) === 'undefined') {
