200405b - initial test version

--- a/tinymce.html
+++ b/tinymce.html
@@ -31,8 +31,11 @@
 </script>
 </head>
 <body>
-  <form>
+  <form name=myForm >
+    <br>Όνοματεπώνυμο:<input type=text name="name"> Τάξη/Τμήμα: <input type=text name="tmima"> 
+    <br>Σχολείο: <input type=text name="sxoleio"> <BR>
   <textarea></textarea>
+  <input type=submit value="Υποβολή" name="Υποβολή" >
   </form>
   <hr>
   <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
