200405b - initial test version

--- a/tinymce.html
+++ b/tinymce.html
@@ -31,7 +31,7 @@
 </script>
 </head>
 <body>
-  <form name=myForm >
+  <form name=myForm id=myForm >
     <br>Όνοματεπώνυμο:<input type=text name="name"> Τάξη/Τμήμα: <input type=text name="tmima"> 
     <br>Σχολείο: <input type=text name="sxoleio"> <BR>
   <textarea></textarea>
