200405c - seem to work test01

--- a/tinymce.html
+++ b/tinymce.html
@@ -32,10 +32,10 @@
 </head>
 <body>
   <form name=myForm id=myForm >
-    <br>Όνοματεπώνυμο:<input type=text name="name"> Τάξη/Τμήμα: <input type=text name="tmima"> 
+    <br>Τάξη/Τμήμα: <input type=text name="tmima"> , Όνοματεπώνυμο:<input type=text name="name">  
     <br>Σχολείο: <input type=text name="sxoleio"> <BR>
-  <textarea></textarea>
-  <input type=submit value="Υποβολή" name="Υποβολή" >
+  <textarea name=apantisi ></textarea>
+  <input type=submit name="Υποβολή" >
   </form>
   <hr>
   <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
