--- a/tinymce.html
+++ b/tinymce.html
@@ -35,7 +35,7 @@
     <br>Τάξη/Τμήμα: <input type=text name="tmima"> , Όνοματεπώνυμο:<input type=text name="name">  
     <br>Σχολείο: <input type=text name="sxoleio"> <BR>
   <textarea name=apantisi ></textarea>
-  <input type=submit name="Υποβολή" >
+  <input type=submit value="Υποβολή" >
   </form>
   <hr>
   <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
