201022 - added id+name to text area

--- a/tinymce.html
+++ b/tinymce.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <form>
-  <textarea></textarea>
+  <textarea name="text_entered" id="text_entered" ></textarea>
   </form>
   <hr>
   <p onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" >
