--- a/tinymce_submit.html
+++ b/tinymce_submit.html
@@ -37,7 +37,7 @@ Changes:
 </head>
 <body>
 	<form action="handle-submit.php" method="post" onsubmit="tinyMCE.triggerSave()">
-		<textarea name="text_entered" ></textarea>
+		<textarea name="text_entered" id="text_entered"  ></textarea>
 		<div id="div-submit" ><!------------------------------div-submit -->
 		<label for="name">ΟΝΟΜΑ ΣΧΟΛΕΙΟΥ:</label>
 		<input type="text" id="schoolname" name="schoolname" size=15>
