--- a/tinymce_submit.html
+++ b/tinymce_submit.html
@@ -25,7 +25,8 @@ Changes:
     ],    
     toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | outdent indent |  numlist bullist | backcolor removeformat | forecolor | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | alignleft aligncenter alignright alignjustify | ltr rtl',
     table_toolbar : "" , //Disables the internal table popup toolbar
-     gecko_spellcheck : true,
+    browser_spellcheck : true, 
+    //gecko_spellcheck : true, //deprecated
   //toolbar_sticky: true,
   //table_responsive_width: true,
   
